gcc/testsuite/g++.old-deja/g++.mike/misc3.C
// { dg-do assemble  }
// GROUPS uncaught
int a;// { dg-error "" } .*
int a;// { dg-error "" } .*
